fixed overflow-x

--- a/scss/global/base.scss
+++ b/scss/global/base.scss
@@ -1,12 +1,12 @@
 html {
   font-size: 13px;
   max-width: 100%;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
   font-family: Helvetica, sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 * {
